Finalized examples, readme, and first release for GitHub

--- a/src/DotJson.Tests/DotJson.Tests.csproj
+++ b/src/DotJson.Tests/DotJson.Tests.csproj
@@ -76,7 +76,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DotJson.Core\DotJson.Core.csproj">
       <Project>{F43F6E0D-C281-4245-AD0C-5033C70E611D}</Project>
-      <Name>JsonService.Core</Name>
+      <Name>DotJson.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
