Updated DLL to latest version (whoops)

--- a/src/DotJson.Core/DotJson.Core.csproj
+++ b/src/DotJson.Core/DotJson.Core.csproj
@@ -58,13 +58,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DotJson.cs" />
+    <Compile Include="DotJson.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>copy $(ProjectDir)DotJson.cs $(SolutionDir)..\ /y
+copy $(TargetPath) $(SolutionDir)..\ /y</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
